# d4-format

./: .gitignore
.github/workflows/: pyd4-ci.yml
d4/: Cargo.toml
d4-hts/: build_htslib.sh
d4/src/: lib.rs
d4/src/d4file/: mod.rs  writer.rs
d4/src/index/: mod.rs
d4/src/index/data_index/: data.rs  mod.rs
d4/src/ptab/: bit_array.rs  mod.rs
d4/src/ssio/: reader.rs
d4/src/stab/sparse_array/: reader.rs
d4/tests/: split_partition.rs
d4/tests/common/: mod.rs
docs/: 2026-05-26-d4-pbzarr-feature-flags-design.md
pyd4/: Cargo.toml  pyproject.toml
pyd4/python/pyd4/: __init__.py
